# XOR-FileEncryptor

./: .gitignore  CMakeLists.txt  FileEncoder.cbp  FileEncoder.depend  FileEncoder.layout  README.md  cstmio.c  cstmio.h  encoder.c  encoder.h  main.c  sonar-project.properties
.github/workflows/: build.yml
src/: Constants.h  constants.h  dinput.c  dinput.h  encoder.c  input.c  input.h  macros.h  main.c
src/Cli/: argFlags.h  argHandlers.c  argHandlers.h  args.c  args.h  options.c  options.h
src/Custom/: cstmio.c  cstmio.h  cstmstr.c  cstmstr.h
src/Customs/: cstmio.c  cstmio.h  cstmstr.c  cstmstr.h
src/Definitions/: constants.h  macros.h
src/Encoder/: xorencoder.c  xorencoder.h
src/Encoders/: xorencoder.c  xorencoder.h
src/Encryptors/: xorencryptor.c  xorencryptor.h
src/IO/: cstmio.c  cstmio.h  input.c
